--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@ section {
   padding: 1rem;
   background-color: rgba(0, 0, 0, 0.4);
 }
+label{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 1rem;
+}
 
 form {
   display: flex;
