--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ html {
 body {
   min-height: 100vh;
   background-color: aqua;
+  background: url(./assets/architecture-2256489_1280.jpg);
 }
 
 .App {
