--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ html {
 body {
     min-height: 100vh;
     background-color: dodgerblue;
+    background-image: url(./assets/fantasy-3077928_1280.jpg);
+    background-size: cover;
 }
 
 .App {
