--- a/src/index.css
+++ b/src/index.css
@@ -120,3 +120,21 @@ button {
 .line {
     display: inline-block;
 }
+
+.persistCheck{
+    font-size: 0.75rem;
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.persistCheck label{
+    margin: 0;
+}
+
+[type = "checkbox"]{
+    height: 20px;
+    width: 20px;
+    margin: 0px 5px 2px 2px;
+}
